feat(images): add infinite loading for images